--- a/exBean/WebContent/form.html
+++ b/exBean/WebContent/form.html
@@ -4,9 +4,8 @@
 </head>
 <body>
  <form action="create.jsp" method="post">
-  <input type="text" name="no" size="20">
-  <input type="text" name="name" size="20">
-  <input type="submit">
+      <input type="text" name="no" size="20"> <input
+         type="text" name="name" size="20"> <input type="submit">
  </form>
 </body>
 </html>
